# homework28

./: pyproject.toml
ads/: settings.py  urls.py
advertisements/: models.py  views.py
advertisements/migrations/: 0001_initial.py  0002_initial.py
categories/: views.py
categories/migrations/: 0001_initial.py
fixtures/: ad.json  category.json  location.json  user.json
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
utils/: utils.py
